# croaker

./: .gitignore  CMakeLists.txt  README.md  Tijdschrijfformulieren.xlsx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: dod.md
.github/workflows/: cmake.yml
images/font/: font.opt
lib/: background.cpp  brightness.cpp  brightness.h  collision.cpp  collision.h  conversion.cpp  conversion.h  convertion.cpp  display_driver.cpp  display_driver.h  game_states.cpp  game_states.h  gfx.cpp  gfx.h  global_time.cpp  global_time.h  images.cpp  images.h  ir.cpp  ir.h  nunchuk_frogger.cpp  nunchuk_frogger.h  nunchuk_value.cpp  nunchuk_value.h  prelude.h  segment_display.cpp  segment_display.h  spi_basics.cpp  spi_basics.h  touch_driver.cpp  touch_driver.h
src/: main.cpp
tests/: display_driver.cpp  gfx.cpp  ir_packet.cpp
